# cinereserve-api

./: .dockerignore  .gitignore  README.md  create_admin.py  docker-compose.yml  dockerfile  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
core/: settings.py  urls.py
movie_sessions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
movie_sessions/migrations/: 0001_initial.py  0002_alter_session_options_session_end_time_and_more.py  0003_alter_ticket_seat_remove_session_room_capacity_and_more.py  0004_alter_session_room.py  0005_reservation.py  0006_alter_session_room.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_movie_genre_alter_movie_synopsis_and_more.py
room/: admin.py  models.py  urls.py
room/migrations/: 0001_initial.py
