[project]
name = "cinereserve-api"
version = "0.1.0"
description = ""
authors = [
    {name = "thiagoeduardoc",email = "thiagoeduardoc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "cinereserve_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
